[package]
name = "observable_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "macros",
    "observable"
]

[dev-dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
macros = {path = "./macros"}
observable = {path = "./observable"}
